# maxrects-packer

./: CMakeLists.txt  README.md  example.cpp
src/: CMakeLists.txt  abstract_bin.cpp  abstract_bin.h  maxrects.h  maxrects_bin.cpp  maxrects_bin.h  maxrects_packer.cpp  maxrects_packer.h  oversized_element_bin.cpp  oversized_element_bin.h  rectangle.cpp  rectangle.h
tests/: CMakeLists.txt  simple_test.h  test_main.cpp  test_maxrects_bin.cpp  test_maxrects_packer.cpp  test_oversized_element_bin.cpp  test_rectangle.cpp
